[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Bomb.gd" type="Script" id=1]
[ext_resource path="res://shaders/colour_band.shader" type="Shader" id=2]
[ext_resource path="res://sprites/invader-fire/invader-fire-plunger-frame1.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/world_y = 0
shader_param/height = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.48521, 2.9366 )

[node name="Bomb" type="Area2D"]
collision_layer = 2
collision_mask = 28
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.51521, 3.00312 )
shape = SubResource( 2 )

[node name="Frame_timer" type="Timer" parent="."]
wait_time = 0.04
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 4.0
margin_right = 44.0
margin_bottom = 14.0
[connection signal="area_entered" from="." to="." method="_on_Bomb_area_entered"]
[connection signal="bomb_grounded" from="." to="." method="_on_Bomb_bomb_grounded"]
[connection signal="timeout" from="Frame_timer" to="." method="_on_Frame_timer_timeout"]
